# smart_market

./: pyproject.toml  requirements.txt
app/config/settings/: base.py  dev.py  production.py
app/members/: forms.py  models.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200912_0047.py  0003_remove_user_name.py  0004_remove_user_profile_img.py
app/templates/: base.html
app/templates/members/: login.html  signup.html
