[tool.poetry]
name = "smart_market_in_glab"
version = "0.1.0"
description = ""
authors = ["kimdooh2019 <choiinhee2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
django-extensions = "^3.0.8"
notebook = "^6.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
